# crewai-series

./: .env  .gitignore  README.md  Readme.md
day_01/: README.md  pyproject.toml
day_01/src/day_01/: crew.py  main.py  report.md
day_01/src/day_01/config/: agents.yaml  tasks.yaml
day_02/: README.md  pyproject.toml
day_02/src/day_02/: crew.py  main.py
day_03/: README.md
day_03/src/day_03/: main.py  report.md
day_03/src/day_03/config/: agents.yaml  tasks.yaml
day_04/: pyproject.toml
day_04/src/day_04/: crew.py  main.py  report.md
day_04/src/day_04/tools/: custom_tool.py
day_05/src/day_05/: crew.py  main.py
day_05/src/day_05/config/: tasks.yaml
day_05/src/day_05/tools/: custom_tool.py
