[project]
name = "day_01"
version = "0.1.0"
description = "day-01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
day_01 = "day_01.main:run"
run_crew = "day_01.main:run"
train = "day_01.main:train"
replay = "day_01.main:replay"
test = "day_01.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
