[project]
name = "day_03"
version = "0.1.0"
description = "day-03 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
day_03 = "day_03.main:run"
run_crew = "day_03.main:run"
train = "day_03.main:train"
replay = "day_03.main:replay"
test = "day_03.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
